--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Ensure the body takes at least the full height of the viewport */
+    min-height: 100vh;
     margin: 0;
     font-family: 'Arial', sans-serif;
     background: linear-gradient(to bottom, #495e5e, #19bebe);
